# ultrahonk_soroban_contract

./: .env  .gitignore  Cargo.toml  DEEP_DIVE.md  LICENSE  README.md  chitsheet  environments.toml  index.html  package-lock.json  package.json  test_real_proof.js  vite.config.ts
.config/stellar/: config.toml  upgrade_check.json
.config/stellar/contract-ids/: guess_the_number.json  guess_the_puzzle.json  ultrahonk_soroban_contract.json
.config/stellar/identity/: default.toml
.config/stellar/network/: futurenet.toml
contracts/guess-the-number/src/: lib.rs
contracts/guess-the-puzzle/: Cargo.toml  ultrahonk_soroban_contract.wasm
contracts/guess-the-puzzle/src/: lib.rs
contracts/ultrahonk-soroban-contract/: Cargo.toml
contracts/ultrahonk-soroban-contract/src/: lib.rs
contracts/ultrahonk-soroban-contract/tests/sudoku/: Nargo.toml  Prover.toml
contracts/ultrahonk-soroban-contract/tests/sudoku/.config/stellar/: upgrade_check.json
contracts/ultrahonk-soroban-contract/tests/sudoku/src/: main.nr
contracts/ultrahonk-soroban-contract/tests/zkp_maze/: Nargo.toml  Prover.toml
contracts/ultrahonk-soroban-contract/tests/zkp_maze/src/: main.nr  test_solutions.nr
contracts/ultrahonk-soroban-contract/tornado_classic/circuit/scripts/: gen_artifacts.sh
contracts/ultrahonk-soroban-contract/tornado_classic/contracts/: Cargo.toml
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/circuits/: fib_chain.json  fib_chain_vk.json  simple_circuit.json  simple_circuit_vk.json  zkp_maze.json  zkp_maze_vk.json
frontend/src/: NoirService.ts  StellarService.ts  main.ts  styles.css  sudokuGenerator.ts
public/circuits/: sudoku.json  sudoku_vk.json
public/wasm/: acvm_js_bg.wasm  noirc_abi_wasm_bg.wasm
scripts/: invoke_ultrahonk.py
src/: App.tsx  main.tsx
src/components/: ConnectAccount.tsx  ContractConfig.tsx  FundAccountButton.tsx  GuessThePuzzle.tsx  NetworkPill.tsx  PrizePool.tsx  Sudoku.module.css  Sudoku.tsx
src/contexts/: PrizePoolContext.tsx
src/contracts/: guess_the_number.ts  guess_the_puzzle.ts  ultrahonk_soroban_contract.ts  util.ts
src/debug/components/: PrettyJson.tsx  RenderOneOf.tsx
src/debug/util/: getWasmContractData.ts  sorobanUtils.ts
src/debug/validate/methods/: getDataUrlError.ts
src/hooks/: useSubscription.ts
src/pages/: Debugger.tsx  Home.tsx
src/services/: NoirService.ts  StellarContractService.ts
src/util/: friendbot.ts  storage.ts  sudokuGenerator.ts
tests/: integration_tests.rs
tests/zkp_maze/src/: maze_config.nr
ultrahonk-soroban-contract-sdk/: README.md  package.json  pnpm-lock.yaml
ultrahonk-soroban-contract-sdk/src/: index.ts
