[package]
name = "guess-the-puzzle"
description = "Admin sets up the pot, anyone can guess to win it"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[package.metadata.stellar]
cargo_inherit = true 

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "23.4.0"

[dev-dependencies]
soroban-sdk = { version = "23.4.0", features = ["testutils"] }
