[package]
name = "ultrahonk_soroban_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "23.1.0", default-features = false, features = ["alloc"] }
ultrahonk_rust_verifier = { git = "https://github.com/yugocabrio/ultrahonk-rust-verifier.git", branch = "main", default-features = false }

# 아래는 lib.rs에서 직접 사용하는 타입들을 위해 명시적으로 추가.
ark-bn254 = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
sha3 = { version = "0.10", default-features = false }

[dev-dependencies]
# Enable test helpers for local unit tests
soroban-sdk = { version = "23.1.0", features = ["testutils"] }
soroban-env-host = "24.0.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.stellar]
cargo_inherit = true
